--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.css
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.css
@@ -1,7 +1,61 @@
-label {
+label, input {
     display: inline-block;
     margin-right: 5px;
-    margin-left: 5px;
+    margin-left: 10px;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 
+#botoNou{
+  
+    color: white;
+    background: #68A225 0% 0% no-repeat padding-box;
+    margin-left: 3px
+
+}
+
+#botoElimina{
+
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    margin-left: 3px
+
+}
+
+#aplicarCanvis{
+    background: #68A225 0% 0% no-repeat padding-box;
+    margin-left: 3px
+}
+
+#redo{
+
+     background: #FF9300;
+     margin-left: 3px
+ 
+}
+
+#undo{
+
+     background: #FF9300;
+     margin-left: 3px
+    
+}
+
+#borrarCanvis{
+    background: #DF3133;
+ 
+}
+
+#grup1 {
+    text-align: start;
+    width: 40%
+ }
+
+ #grup2 {
+    text-align: end;  
+    width: 60%
+ }
+
+#grup1, #grup2
+{
+    display:inline-block;
+}
