--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
@@ -1,33 +1,60 @@
-<div class="container" style="margin: 50px;">
+
+   <div id=grup1 >
+    <button  mat-mini-fab  id="borrarCanvis" type="button"  (click)="deleteChanges()" [disabled]="comptadorCanvis <= 0">
+        <mat-icon fontSet="material-icons-round" > close </mat-icon>
+    </button>
+    <button mat-mini-fab  id="undo"  (click)="undo()" [disabled]="comptadorCanvis <= 0" >
+        <mat-icon fontSet="material-icons-round" > undo </mat-icon>
+    </button>
+    <button mat-mini-fab  id="redo"  (click)="redo()" [disabled]="comptadorRedo <= 0">
+        <mat-icon fontSet="material-icons-round" > redo </mat-icon>
+    </button>
+    <button mat-mini-fab  id="aplicarCanvis"  (click)="applyChanges()" [disabled]="comptadorCanvis <= 0" >
+        <mat-icon fontSet="material-icons-round" > check </mat-icon>
+    </button>
+</div>
+
+<div id=grup2 >
+    <label>Search </label>
+    <input type="text" placeholder="" (keyup)="quickSearch()" [(ngModel)]="searchValue" ml-2 >
+    <button mat-stroked-button id="botoElimina"  (click)="removeData()">
+        <mat-icon fontSet="material-icons-round" > delete </mat-icon>
+        Elimina
+    </button>
+    <button mat-stroked-button id="botoNou"  (click)="newData()">
+        <mat-icon fontSet="material-icons-round"> add_circle_outline </mat-icon>                 
+        Nou
+    </button>
 
 
     
-    <!-- <button class="btn btn-primary" (click)="removeElement()" > borrar </button> -->
-    <button (click)="removeData()">Remove</button>
-    <button (click)="newData()">New</button>
-    <div class="row">
-        <div class="col-12 text-left" >
-            <label>Search </label>
-            <input type="text" placeholder="" (keyup)="quickSearch()" [(ngModel)]="searchValue" ml-2 >
-            
-        </div>
-    </div>
+</div>
 
-    <div class="row">
-        <div class="ag-theme-balham col-12" id="myGrid">
-            <ag-grid-angular
-            style=" width: 750px; height: 750px;"
-            class="ag-theme-balham"
-            [floatingFilter]="true"
-            [rowData]="rowData"
-            [columnDefs]="columnDefs"
-            [animateRows]="true"
-            [pagination]="false"
-            [modules]="modules"            
-            rowSelection="multiple"
-            (gridReady)="onGridReady($event)">
-            </ag-grid-angular>
-        </div>
+
+
+<div class="row" style=" height: 100%">
+    <div class="ag-theme-balham" id="myGrid" style=" width:100%; height: 100%" >
+        <ag-grid-angular
+        style=" width: 100%; height: 100%;"
+        class="ag-theme-balham"
+        [floatingFilter]="true"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        [gridOptions]="gridOptions"
+        [animateRows]="true"
+        [pagination]="false"
+        [modules]="modules"     
+        [undoRedoCellEditing]="true"    
+        [undoRedoCellEditingLimit]= 200
+        [suppressRowClickSelection]=true
+        [enableCellChangeFlash]=true
+        rowSelection="multiple"
+        (cellEditingStopped) ="onCellEditingStopped($event)"
+        (cellValueChanged)="onCellValueChanged($event)"
+        (gridReady)="onGridReady($event)">
+        
+        </ag-grid-angular>
     </div>
 </div>
+
 
