Afegit suport botó editar

--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
@@ -51,6 +51,7 @@
             [undoRedoCellEditingLimit]= 200
             [suppressRowClickSelection]=true
             [enableCellChangeFlash]=true
+            [frameworkComponents]="frameworkComponents"
             rowSelection="multiple"
             (filterModified)="onFilterModified()"
             (cellEditingStopped) ="onCellEditingStopped($event)"
