--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
@@ -1,17 +1,14 @@
-
-
-
     <div id=grup1 class="editDivBtns">
         <button  mat-mini-fab class="editBtn"  *ngIf="botoDescartarCanvis"  id="borrarCanvis" type="button"  (click)="deleteChanges()" [disabled]="comptadorCanvis <= 0">
             <mat-icon  fontSet="material-icons-round" > close </mat-icon>
         </button>
-        <button mat-mini-fab  class="editBtn" *ngIf="botoUndo"  id="undo"  (click)="undo()" [disabled]="comptadorCanvis <= 0" >
+        <button mat-mini-fab class="editBtn" *ngIf="botoUndo"  id="undo"  (click)="undo()" [disabled]="comptadorCanvis <= 0" >
             <mat-icon fontSet="material-icons-round" > undo </mat-icon>
         </button>
-        <button mat-mini-fab  class="editBtn" *ngIf="botoRedo"  id="redo"  (click)="redo()" [disabled]="comptadorRedo <= 0">
+        <button mat-mini-fab class="editBtn" *ngIf="botoRedo"  id="redo"  (click)="redo()" [disabled]="comptadorRedo <= 0">
             <mat-icon fontSet="material-icons-round" > redo </mat-icon>
         </button>
-        <button mat-mini-fab  class="editBtn" *ngIf="botoAplicarCanvis"  id="aplicarCanvis"  (click)="applyChanges()" [disabled]="comptadorCanvis <= 0" >
+        <button mat-mini-fab class="editBtn" *ngIf="botoAplicarCanvis"  id="aplicarCanvis"  (click)="applyChanges()" [disabled]="comptadorCanvis <= 0" >
             <mat-icon fontSet="material-icons-round" > check </mat-icon>
         </button>
     </div>
@@ -36,10 +33,10 @@
 
 
     <div class="row" style=" height: 100%">
-        <div class="ag-theme-balham" id="myGrid" style=" width:100%; height: 100%" >
+        <div class="ag-theme-alpine" id="myGrid" style=" width:100%; height: 100%" >
             <ag-grid-angular
             style=" width: 100%; height: 100%;"
-            class="ag-theme-balham"
+            class="ag-theme-alpine"
             [floatingFilter]="true"
             [rowData]="rowData"
             [columnDefs]="columnDefs"
@@ -51,6 +48,7 @@
             [undoRedoCellEditingLimit]= 200
             [suppressRowClickSelection]=true
             [enableCellChangeFlash]=true
+            [sortable]=true
             [frameworkComponents]="frameworkComponents"
             rowSelection="multiple"
             (filterModified)="onFilterModified()"
