--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
@@ -54,7 +54,7 @@
     <div class="row" style=" height: 100%">
         <div id="myGrid" style=" width:100%; height: 100%" >
             <ag-grid-angular
-            style=" width: 100%; height: 100%;"
+            style="width: 100%; height: 100%;min-height: 200px;"
             [class]="themeGrid"
             [floatingFilter]="true"
             [rowData]="rowData"
@@ -72,8 +72,8 @@
             (filterModified)="onFilterModified()"
             (cellEditingStopped) ="onCellEditingStopped($event)"
             (cellValueChanged)="onCellValueChanged($event)"
-            (gridReady)="onGridReady($event)">
-            
+            (gridReady)="onGridReady($event)"
+            (firstDataRendered)="firstDataRendered()">
             </ag-grid-angular>
         </div>
     </div>
