--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-tree/data-tree.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-tree/data-tree.component.html
@@ -1,7 +1,10 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" cdkDropList (cdkDropListDropped)="drop($event)">
-	<mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding cdkDrag [cdkDragData]="node"
-		(mouseenter)="dragHover(node)" (mouseleave)="dragHoverEnd()" (cdkDragStarted)="dragStart()"
-		(cdkDragReleased)="dragEnd()">
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" >
+	<mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding  draggable="true"
+	(dragstart)="handleDragStart($event, node);" 	(dragover)="handleDragOver($event, node);"
+	(drop)="handleDrop($event, node);" 	(dragend)="handleDragEnd($event);"                  
+	  [ngClass]="{'drop-above': dragNodeExpandOverArea === 'above' && dragNodeExpandOverNode === node,
+	'drop-below': dragNodeExpandOverArea === 'below' && dragNodeExpandOverNode === node,
+	'drop-center': dragNodeExpandOverArea === 'center' && dragNodeExpandOverNode === node}">
 		<button mat-icon-button disabled></button>
 		<mat-icon *ngIf="node.type ==='folder'" class="type-icon" [attr.aria-label]="node.type + 'icon'">
 			folder
@@ -13,14 +16,21 @@
 		<button *ngIf="node.type ==='folder'" (click)="onButtonClicked(node.id, 'newNode')" mat-icon-button>
 			<mat-icon>playlist_add</mat-icon>
 		</button>
+		<button mat-icon-button (click)="onButtonClicked(node.id, 'delete')">
+			<mat-icon>delete</mat-icon>
+		</button>
 		<button mat-icon-button (click)="onButtonClicked(node.id, 'edit')">
 			<mat-icon>edit</mat-icon>
 		</button>
+
 	</mat-tree-node>
 
-	<mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding cdkDrag [cdkDragData]="node"
-		(mouseenter)="dragHover(node)" (mouseleave)="dragHoverEnd()" (cdkDragStarted)="dragStart()"
-		(cdkDragReleased)="dragEnd()">
+	<mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding  draggable="true"
+	(dragstart)="handleDragStart($event, node);" 	(dragover)="handleDragOver($event, node);"
+	(drop)="handleDrop($event, node);" 	(dragend)="handleDragEnd($event);"                  
+	 [ngClass]="{'drop-above': dragNodeExpandOverArea === 'above' && dragNodeExpandOverNode === node,
+	'drop-below': dragNodeExpandOverArea === 'below' && dragNodeExpandOverNode === node,
+	'drop-center': dragNodeExpandOverArea === 'center' && dragNodeExpandOverNode === node}">
 		<button mat-icon-button matTreeNodeToggle (click)="expansionModel.toggle(node.id)"
 			[attr.aria-label]="'toggle ' + node.name">
 			<mat-icon class="mat-icon-rtl-mirror">
@@ -37,8 +47,14 @@
 		<button *ngIf="node.type ==='folder'" (click)="onButtonClicked(node.id, 'newNode')" mat-icon-button>
 			<mat-icon>playlist_add</mat-icon>
 		</button>
+		<button mat-icon-button (click)="onButtonClicked(node.id, 'delete')">
+			<mat-icon>delete</mat-icon>
+		</button>
 		<button mat-icon-button (click)="onButtonClicked(node.id, 'edit')">
 			<mat-icon>edit</mat-icon>
 		</button>
+		
 	</mat-tree-node>
 </mat-tree>
+
+<span #emptyItem></span>
