--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-tree/data-tree.component.scss
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-tree/data-tree.component.scss
@@ -20,3 +20,17 @@
 .cdk-drag-animating {
   transition: transform 200ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.drop-above {
+  border-top: 10px solid #dddddd;
+  margin-top: -10px;
+}
+
+.drop-below {
+  border-bottom: 10px solid #dddddd;
+  margin-bottom: -10px;
+}
+
+.drop-center {
+  background-color: #dddddd;
+}
