Refactor css to scss, change styles, and update version number to 0.7.8

--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
@@ -1,81 +1,65 @@
-    <div id=grup1 class="editDivBtns">
-        <span *ngIf="title"  [translate]="title"> </span>
-        <button title="{{ 'cancel' | translate }}" mat-mini-fab class="editBtn"  *ngIf="discardChangesButton"  id="deleteChangesButton" type="button"  (click)="deleteChanges()" [disabled]="changeCounter <= 0">
-            <mat-icon  fontSet="material-icons-round" > close </mat-icon>
-        </button>
-        <button title="{{ 'undo' | translate }}" mat-mini-fab class="editBtn" *ngIf="undoButton"  id="undo"  (click)="undo()" [disabled]="changeCounter <= 0" >
-            <mat-icon fontSet="material-icons-round" > undo </mat-icon>
-        </button>
-        <button title="{{ 'redo' | translate }}" mat-mini-fab class="editBtn" *ngIf="redoButton"  id="redo"  (click)="redo()" [disabled]="redoCounter <= 0">
-            <mat-icon fontSet="material-icons-round" > redo </mat-icon>
-        </button>
-        <button title="{{ 'accept' | translate }}" mat-mini-fab class="editBtn" *ngIf="applyChangesButton"  id="applyChangesButton"  (click)="applyChanges()" [disabled]="changeCounter <= 0" >
-            <mat-icon fontSet="material-icons-round" > check </mat-icon>
-        </button>
+<div id=grup1 class="editDivBtns">
+    <span *ngIf="title" [translate]="title"> </span>
+    <button type="button" title="{{ 'cancel' | translate }}" mat-mini-fab class="mini-fab mat-red" *ngIf="discardChangesButton"
+        id="deleteChangesButton" type="button" (click)="deleteChanges()" [disabled]="changeCounter <= 0">
+        <mat-icon fontSet="material-icons-round"> close </mat-icon>
+    </button>
+    <button type="button" title="{{ 'undo' | translate }}" mat-mini-fab class="mini-fab mat-orange" *ngIf="undoButton" id="undo"
+        (click)="undo()" [disabled]="changeCounter <= 0">
+        <mat-icon fontSet="material-icons-round"> undo </mat-icon>
+    </button>
+    <button type="button" title="{{ 'redo' | translate }}" mat-mini-fab class="mini-fab mat-orange" *ngIf="redoButton" id="redo"
+        (click)="redo()" [disabled]="redoCounter <= 0">
+        <mat-icon fontSet="material-icons-round"> redo </mat-icon>
+    </button>
+    <button type="button" title="{{ 'accept' | translate }}" mat-mini-fab class="mini-fab mat-green" *ngIf="applyChangesButton"
+        id="applyChangesButton" (click)="applyChanges()" [disabled]="changeCounter <= 0">
+        <mat-icon fontSet="material-icons-round"> check </mat-icon>
+    </button>
+</div>
+
+<div id=grup2 class="actionsDivBtns">
+    <label *ngIf="globalSearch" [translate]="'search'"> </label>
+    <input *ngIf="globalSearch" type="text" class="searchGenericInput" placeholder="" (keyup)="quickSearch()"
+        [(ngModel)]="searchValue" ml-2>
+    <button type="button" *ngIf="deleteButton" mat-flat-button id="deleteButton" class="deleteButton" (click)="removeData()">
+        <mat-icon fontSet="material-icons-round"> delete </mat-icon>
+        <span [translate]="'remove'"> </span>
+
+    </button>
+    <button type="button" *ngIf="actionButton" mat-flat-button [matMenuTriggerFor]="menu" id="actionButton" class="actionButton">
+        <span [translate]="'actions'"> </span>
+        <mat-icon fontSet="material-icons-round"> keyboard_arrow_down </mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+        <button type="button" mat-menu-item *ngIf="!hideExportButton" (click)="exportData()"> {{"export" | translate}} </button>
+        <button type="button" mat-menu-item *ngIf="!hideDuplicateButton" (click)="onDuplicateButtonClicked()"> {{"duplicate" |
+            translate}}</button>
+        <button type="button" mat-menu-item *ngIf="!hideSearchReplaceButton"> {{"search/replace" | translate}}</button>
+    </mat-menu>
+
+    <button type="button" *ngIf="newButton" mat-flat-button class="newButton" (click)="newData()">
+        <mat-icon fontSet="material-icons-round"> add_circle_outline </mat-icon>
+        <span [translate]="'new'"> </span>
+    </button>
+    <button type="button" *ngIf="addButton" mat-flat-button class="newButton" (click)="onAddButtonClicked()">
+        <mat-icon fontSet="material-icons-round"> add_circle_outline </mat-icon>
+        <span [translate]="'add'"> </span>
+    </button>
+
+</div>
+
+
+
+<div class="row" style=" height: 100%">
+    <div id="myGrid" style=" width:100%; height: 100%">
+        <ag-grid-angular style="width: 100%; height: 100%;min-height: 200px;" [class]="themeGrid"
+            [floatingFilter]="true" [rowData]="rowData" [columnDefs]="columnDefs" [gridOptions]="gridOptions"
+            [animateRows]="true" [pagination]="false" [modules]="modules" [undoRedoCellEditing]="true"
+            [undoRedoCellEditingLimit]=200 [suppressRowClickSelection]=true [frameworkComponents]="frameworkComponents"
+            rowSelection="multiple" multiSortKey="key" (filterModified)="onFilterModified()"
+            (cellEditingStopped)="onCellEditingStopped($event)" (cellValueChanged)="onCellValueChanged($event)"
+            (gridReady)="onGridReady($event)" (firstDataRendered)="firstDataRendered()">
+        </ag-grid-angular>
     </div>
-
-    <div id=grup2 class="actionsDivBtns" >
-        <label *ngIf="globalSearch" [translate]="'search'"> </label>
-        <input *ngIf="globalSearch"type="text" class="searchGenericInput" placeholder="" (keyup)="quickSearch()" [(ngModel)]="searchValue" ml-2 >
-        <button *ngIf="deleteButton"  mat-stroked-button id="deleteButton"  (click)="removeData()">
-            <mat-icon fontSet="material-icons-round" > delete </mat-icon>
-            <span  [translate]="'remove'"> </span>
-            
-        </button>
-
-        
-        <button *ngIf="actionButton"  mat-stroked-button [matMenuTriggerFor]="menu" id="actionButton">
-            <span  [translate]="'actions'"> </span>    
-            <mat-icon fontSet="material-icons-round" > keyboard_arrow_down </mat-icon>     
-        </button>
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item *ngIf="!hideExportButton" (click)="exportData()" > {{"export" | translate}} </button>
-            <button mat-menu-item *ngIf="!hideDuplicateButton" (click)="onDuplicateButtonClicked()"> {{"duplicate" | translate}}</button>
-            <button mat-menu-item *ngIf="!hideSearchReplaceButton"> {{"search/replace" | translate}}</button>
-        </mat-menu>  
-            
-
-        <button  *ngIf="newButton" mat-stroked-button id="newButton"  (click)="newData()">
-            <mat-icon fontSet="material-icons-round"> add_circle_outline </mat-icon>      
-            <span  [translate]="'new'"> </span>           
-        </button>
-
-        <button  *ngIf="addButton" mat-stroked-button id="newButton"  (click)="onAddButtonClicked()">
-            <mat-icon fontSet="material-icons-round"> add_circle_outline </mat-icon>      
-            <span  [translate]="'add'"> </span>           
-        </button>
-        
-
-        
-    </div>
-
-
-
-    <div class="row" style=" height: 100%">
-        <div id="myGrid" style=" width:100%; height: 100%" >
-            <ag-grid-angular
-            style="width: 100%; height: 100%;min-height: 200px;"
-            [class]="themeGrid"
-            [floatingFilter]="true"
-            [rowData]="rowData"
-            [columnDefs]="columnDefs"
-            [gridOptions]="gridOptions"
-            [animateRows]="true"
-            [pagination]="false"
-            [modules]="modules"     
-            [undoRedoCellEditing]="true"    
-            [undoRedoCellEditingLimit]= 200
-            [suppressRowClickSelection]=true
-            [frameworkComponents]="frameworkComponents"
-            rowSelection="multiple"
-            multiSortKey="key"
-            (filterModified)="onFilterModified()"
-            (cellEditingStopped) ="onCellEditingStopped($event)"
-            (cellValueChanged)="onCellValueChanged($event)"
-            (gridReady)="onGridReady($event)"
-            (firstDataRendered)="firstDataRendered()">
-            </ag-grid-angular>
-        </div>
-    </div>
-
-
+</div>
