--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-grid/dialog-grid.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-grid/dialog-grid.component.html
@@ -8,6 +8,7 @@
   </div>
 </mat-dialog-content>
 <div mat-dialog-actions align="end">
-  <button mat-button  (click)="closeDialog()">{{"cancel" | translate}}</button>
-  <button mat-button  (click)="getAllSelectedRows()" cdkFocusInitial>{{"add" | translate}}</button>
+  <button mat-flat-button class="returnButton" (click)="closeDialog()">{{"cancel" | translate}}</button>
+  <button mat-flat-button class="saveButton" (click)="getAllSelectedRows()" cdkFocusInitial>{{"add" | translate}}</button>
 </div>
+
