--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-message/dialog-message.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-message/dialog-message.component.html
@@ -5,6 +5,6 @@
   </p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button  (click)="closeDialog()">{{"cancel" | translate}}</button>
-  <button mat-button  (click)="doAccept()" cdkFocusInitial>{{"accept" | translate}}</button>
+  <button mat-flat-button class="returnButton"  *ngIf="!hideCancelButton" (click)="closeDialog()">{{"cancel" | translate}}</button>
+  <button mat-flat-button class="saveButton"  (click)="doAccept()" cdkFocusInitial>{{"accept" | translate}}</button>
 </mat-dialog-actions>
