--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-grid/dialog-grid.component.scss
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-grid/dialog-grid.component.scss
@@ -1,5 +1,3 @@
-
-
 .dialogConent{
     margin:inherit !important;
     padding: inherit !important;
@@ -7,4 +5,9 @@
     height: 100%;
     width: 100%;
     overflow: auto;
+}
+
+.titleDialog{
+    margin-top: inherit !important;
+    margin-bottom: 15px !important;
 }
