--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-message/dialog-message.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-message/dialog-message.component.html
@@ -1,4 +1,4 @@
-<h5 mat-dialog-title>{{title}}</h5>
+<h5 mat-dialog-title class="titleDialog">{{title}}</h5>
 <mat-dialog-content class="mat-typography">
   <p>
     {{message}}
