--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-translation/dialog-translation.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-translation/dialog-translation.component.html
@@ -10,18 +10,19 @@
             <mat-form-field appearance="outline">
             <input matInput type="text" formControlName="catalanValue" required>
             </mat-form-field>
+            <mat-icon class="icon" svgIcon="icon_lang_ca"></mat-icon>
         </div>
 
         <div class="displayInline">
             <label class="formLabelDialog">
                 {{'value' | translate}}
             </label>
+
             <mat-form-field appearance="outline">
             <input matInput type="text" formControlName="spanishValue">
             </mat-form-field>
+            <mat-icon class="icon" svgIcon="icon_lang_es"></mat-icon>
         </div>
-
-
 
         <div class="displayInline">
             <label class="formLabelDialog">
@@ -30,6 +31,17 @@
             <mat-form-field appearance="outline">
             <input matInput type="text" formControlName="englishValue">
             </mat-form-field>
+            <mat-icon class="icon" svgIcon="icon_lang_en"></mat-icon>
+        </div>
+
+        <div class="displayInline">
+            <label class="formLabelDialog">
+                {{'value' | translate}}
+            </label>
+            <mat-form-field appearance="outline">
+            <input matInput type="text" formControlName="araneseValue">
+            </mat-form-field>
+            <mat-icon class="icon" svgIcon="icon_lang_oc"></mat-icon>
         </div>
 
 
