--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-translation/dialog-translation.component.scss
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-translation/dialog-translation.component.scss
@@ -7,3 +7,17 @@
 .mat-dialog-actions {
     justify-content: flex-end;
 }
+
+.icon{
+    height: 50px !important;
+    width: 40px  !important;
+    margin-left: 30px;
+}
+
+.formLabelDialog {
+    width: 10% !important;
+  }
+
+  .mat-dialog-container{
+    height: max-content !important;
+  }
