--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/data-grid/data-grid.component.html
@@ -1,14 +1,14 @@
 <div id=grup1 class="editDivBtns">
     <span *ngIf="title" [translate]="title"> </span>
     <button type="button" title="{{ 'cancel' | translate }}" mat-mini-fab class="mini-fab mat-red" *ngIf="discardChangesButton"
-        id="deleteChangesButton" type="button" (click)="deleteChanges()" [disabled]="changeCounter <= 0 && !someStatusHasChangedToDelete">
+        id="deleteChangesButton" type="button" (click)="deleteChanges()" [disabled]="changeCounter <= 0 && (!someStatusHasChangedToDelete || discardNonReverseStatus  )">
         <mat-icon fontSet="material-icons-round"> close </mat-icon>
     </button>
-    <button type="button" title="{{ 'undo' | translate }}" mat-mini-fab class="mini-fab mat-orange" *ngIf="undoButton"
+    <button type="button" title="{{ 'undo' | translate }}" mat-mini-fab class="mini-fab mat-orange" *ngIf="undoButton && someColumnIsEditable"
         id="undo" (click)="undo()" [disabled]="changeCounter <= 0">
         <mat-icon fontSet="material-icons-round"> undo </mat-icon>
     </button>
-    <button type="button" title="{{ 'redo' | translate }}" mat-mini-fab class="mini-fab mat-orange" *ngIf="redoButton"
+    <button type="button" title="{{ 'redo' | translate }}" mat-mini-fab class="mini-fab mat-orange" *ngIf="redoButton && someColumnIsEditable"
         id="redo" (click)="redo()" [disabled]="redoCounter <= 0">
         <mat-icon fontSet="material-icons-round"> redo </mat-icon>
     </button>
@@ -41,9 +41,9 @@
         <mat-icon fontSet="material-icons-round"> keyboard_arrow_down </mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-        <button type="button" mat-menu-item *ngIf="!hideExportButton" (click)="exportData()"> {{"export" | translate}}
+        <button type="button" mat-menu-item *ngIf="!hideExportButton" [disabled]="!areRowsSelected()" (click)="exportData()"> {{"export" | translate}}
         </button>
-        <button type="button" mat-menu-item *ngIf="!hideDuplicateButton" (click)="onDuplicateButtonClicked()">
+        <button type="button" mat-menu-item *ngIf="!hideDuplicateButton" [disabled]="!areRowsSelected()" (click)="onDuplicateButtonClicked()">
             {{"duplicate" |
             translate}}</button>
         <button type="button" mat-menu-item *ngIf="!hideSearchReplaceButton && false"> {{"search/replace" | translate}}</button>
@@ -65,7 +65,7 @@
         <ag-grid-angular style="width: 100%; height: 100%;min-height: 200px;" [class]="themeGrid"
             [floatingFilter]="true" [rowData]="rowData" [columnDefs]="columnDefs" [gridOptions]="gridOptions"
             [animateRows]="true" [pagination]="false" [modules]="modules" [undoRedoCellEditing]="true"
-            [undoRedoCellEditingLimit]=200 [suppressRowClickSelection]=true [frameworkComponents]="frameworkComponents"
+            [undoRedoCellEditingLimit]=200 [suppressRowClickSelection]=true [frameworkComponents]="frameworkComponents" [components]="components"
             rowSelection="multiple" multiSortKey="key" (filterModified)="onFilterModified()"
             (cellEditingStopped)="onCellEditingStopped($event)" (cellValueChanged)="onCellValueChanged($event)"
             (gridReady)="onGridReady($event)" (firstDataRendered)="firstDataRendered()">
