--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-grid/dialog-grid.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-grid/dialog-grid.component.html
@@ -2,7 +2,7 @@
 <mat-dialog-content class="dialogConent">
   <div *ngFor="let getAll of getAllsTable; let i = index" class="appDialogDataGridDiv"  [ngStyle]="{'margin-top': i>0?'100px':'0px'}">
     <app-data-grid 
-    [columnDefs]="columnDefsTable[i]" [themeGrid]='themeGrid'  [getAll]='getAll' [globalSearch]=true [singleSelection]="singleSelectionTable[i]"
+    [columnDefs]="columnDefsTable[i]" [themeGrid]='themeGrid' [changeHeightButton]='changeHeightButton' [defaultHeight]='heightByDefault'  [getAll]='getAll' [globalSearch]=true [singleSelection]="singleSelectionTable[i]"
     [title]="titlesTable[i]" [nonEditable]='nonEditable' [eventGetSelectedRowsSubscription]="getAllRows.asObservable()" (getSelectedRows)='joinRowsReceived($event)' >
     </app-data-grid>
   </div>
