--- a/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-translation/dialog-translation.component.html
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/src/lib/dialog-translation/dialog-translation.component.html
@@ -3,9 +3,9 @@
 <form [formGroup]='translationForm' #f="ngForm">
 
 
-        <div class="displayInline">
+        <div class="displayInline" *ngIf="catalanAvailable">
             <label class="formLabelDialog">
-                {{'value' | translate}}
+                {{'Valor'}}
             </label>
             <mat-form-field appearance="outline">
             <input matInput type="text" formControlName="catalanValue" required>
@@ -13,9 +13,9 @@
             <mat-icon class="icon" svgIcon="icon_lang_ca"></mat-icon>
         </div>
 
-        <div class="displayInline">
+        <div class="displayInline"  *ngIf="spanishAvailable">
             <label class="formLabelDialog">
-                {{'value' | translate}}
+                {{'Valor'}}
             </label>
 
             <mat-form-field appearance="outline">
@@ -24,9 +24,9 @@
             <mat-icon class="icon" svgIcon="icon_lang_es"></mat-icon>
         </div>
 
-        <div class="displayInline">
+        <div class="displayInline" *ngIf="englishAvailable" >
             <label class="formLabelDialog">
-                {{'value' | translate}}
+                {{'Value'}}
             </label>
             <mat-form-field appearance="outline">
             <input matInput type="text" formControlName="englishValue">
@@ -34,16 +34,24 @@
             <mat-icon class="icon" svgIcon="icon_lang_en"></mat-icon>
         </div>
 
-        <div class="displayInline">
+        <div class="displayInline" *ngIf="araneseAvailable" >
             <label class="formLabelDialog">
-                {{'value' | translate}}
+                {{'Valor'}}
             </label>
             <mat-form-field appearance="outline">
             <input matInput type="text" formControlName="araneseValue">
             </mat-form-field>
             <mat-icon class="icon" svgIcon="icon_lang_oc"></mat-icon>
         </div>
-
+        <div class="displayInline">
+            <label class="formLabelDialog" *ngIf="frenchAvailable">
+                {{'Valeur'}}
+            </label>
+            <mat-form-field appearance="outline">
+            <input matInput type="text" formControlName="frenchValue">
+            </mat-form-field>
+            <mat-icon class="icon" svgIcon="icon_lang_fr"></mat-icon>
+        </div>
 
   </form>
 
